<resources>
    <string name="app_name">Word Maker</string>
    <string name="title_activity_menu_screen">Menu</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_how_to_play">How To Play</string>
    <string name="title_activity_word_history">Game Play History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_how_to_play">How To Play</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_to">To</string>
    <string name="title_test_vocabulary">Word Maker</string>
    <string name="title_add_word">Add Word</string>
    <string name="title_word">Tap Letter Below</string>
    <string name="image_boy">boy Image</string>
    <string name="image_girl">girl Image</string>
    <string name="image_teacher">teacher Image</string>
</resources>
