<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.duran.prjtestvocabularygame.SplashScreen"
    tools:showIn="@layout/activity_splash_screen"
    android:background="#5f8af6">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prbLoading"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_welcome"
        android:id="@+id/tvWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:textSize="40sp"
        android:textStyle="italic"
        style="@style/textFont"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_to"
        android:id="@+id/tvTo"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:textStyle="italic"
        android:textSize="40sp"
        style="@style/textFont"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_test_vocabulary"
        android:id="@+id/tvTitle"
        android:layout_below="@+id/tvTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        style="@style/textFont"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:id="@+id/imgvBoy"
        android:src="@mipmap/ic_boy"
        android:layout_below="@+id/tvWelcome"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_boy"
        android:layout_toStartOf="@+id/tvWelcome"
        android:layout_above="@+id/tvTitle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgvGirl"
        android:src="@mipmap/ic_girl"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image_girl"
        android:layout_below="@+id/tvWelcome"
        android:layout_toEndOf="@+id/tvWelcome"
        android:layout_alignBottom="@+id/tvTo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgvTeacher"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="33dp"
        android:src="@mipmap/ic_teacher"
        android:layout_above="@+id/prbLoading"
        android:layout_alignEnd="@+id/tvWelcome"
        android:layout_alignStart="@+id/tvWelcome"
        android:contentDescription="@string/image_teacher" />
</RelativeLayout>
